objects/niq__Prediction_Parameter__c.object
<CustomObject>
    <description>This object contains the inputs required by the prediction model to generate prediction results.</description>
    <fields>
        <fullName>niq__Api_Name__c</fullName>
        <description>A value that represents a more user friendly name being sent to the API</description>
        <label>Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Context_Object_Type__c</fullName>
        <description>The user automatically populates this required text field with the type of the context object.</description>
        <label>Context Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Data_Type__c</fullName>
        <description>--DEPRECATED-- The user populates this required text field with the parameter’s data type. Replaced by Input Data Type.</description>
        <label>-D Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Description__c</fullName>
        <description>Model administrators populate this optional text field with a description of the model input. This field appears on the model input mapping page to assist administrators during mapping configuration. By default, the value is blank.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Filter_Syntax__c</fullName>
        <description>Administrators populate this optional text field with nCino Script syntax to apply a filter to results and return only matching records. By default, the value is blank.</description>
        <inlineHelpText>Optionally, enter nCino Script syntax to filter the results.</inlineHelpText>
        <label>Filter Syntax</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>niq__Input_Data_Type__c</fullName>
        <description>The model administrator populates this required picklist field with the parameter’s data type. By default, the value is String.</description>
        <inlineHelpText>Select the input data type.</inlineHelpText>
        <label>Data Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>niq__Lookup_Field_Name__c</fullName>
        <description>Administrators populate this optional text field with the API name of the lookup field that associates the lookup object to the parent. By default, the value is blank.</description>
        <label>Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Lookup_Object__c</fullName>
        <description>Administrators populate this optional text field with the API name of the lookup object to drill down into a field. By default, the value is blank.</description>
        <label>Lookup Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Parameter_Type__c</fullName>
        <description>Administrators populate this optional picklist with the type of prediction parameter for this model input. By default, the value is Field.</description>
        <label>Parameter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                    <default>true</default>
                    <label>Field</label>
                </value>
                <value>
                    <fullName>Matrix Value</fullName>
                </value>
                <value>
                    <fullName>Related Object</fullName>
                </value>
                <value>
                    <fullName>Constant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>niq__Parent_Parameter_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators populate this optional lookup field with the ID of the parent parameter that the system uses to locate the input. By default, the value is blank.</description>
        <label>Parent Parameter Lookup</label>
        <referenceTo>niq__Prediction_Parameter__c</referenceTo>
        <relationshipLabel>Child Prediction Parameters</relationshipLabel>
        <relationshipName>Parent_Prediction_Parameter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>niq__Policy_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Administrators populate this optional lookup field to set the policy type when they map an input to a matrix value. By default, it is blank.</description>
        <inlineHelpText>Enter the name of the associated policy type.</inlineHelpText>
        <label>Policy Type</label>
        <referenceTo>LLC_BI__Policy_Type__c</referenceTo>
        <relationshipLabel>Policy Type</relationshipLabel>
        <relationshipName>Related_Policy_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>niq__Prediction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this required lookup field with the related prediction.</description>
        <label>Prediction</label>
        <referenceTo>niq__Prediction__c</referenceTo>
        <relationshipLabel>Parameters</relationshipLabel>
        <relationshipName>Prediction</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>niq__Related_List_Record_Limit__c</fullName>
        <description>Administrators populate this optional integer field to set the maximum number of records that a related list parameter query can return. By default, the value is blank.</description>
        <inlineHelpText>Optionally, enter an integer to set the maximum number of records that a related list parameter query can return.</inlineHelpText>
        <label>Related List Record Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>niq__Value_Path__c</fullName>
        <description>The system automatically populates this optional text field with the path from the context to the value.</description>
        <label>Value Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Prediction Parameter</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prediction Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>